--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "antd": "^5.7.2",
-    "react": "^16.12.0 || ^17.0.0"
+    "react": "^16.12.0 || ^17.0.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
