fix: add Spring Boot

--- a/web/package.json
+++ b/web/package.json
@@ -3,14 +3,14 @@
   "name": "blog",
   "version": "1.0.0",
   "scripts": {
-    "start": "dumi dev",
-    "docs:build": "dumi build",
-    "docs:deploy": "gh-pages -d docs-dist",
-    "build": "father-build",
+    "start": "../node_modules/.bin/dumi dev",
+    "docs:build": "../node_modules/.bin/dumi build",
+    "docs:deploy": "../node_modules/.bin/gh-pages -d docs-dist",
+    "build": "../node_modules/.bin/father-build",
     "deploy": "npm run docs:build && npm run docs:deploy",
-    "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage",
+    "prettier": "../node_modules/.bin/prettier --write \\\"**/*.{js,jsx,tsx,ts,less,md,json}\\\"",
+    "test": "../node_modules/.bin/umi-test",
+    "test:coverage": "../node_modules/.bin/umi-test --coverage",
     "prepublishOnly": "npm run build"
   },
   "module": "es/index.js",
